--- a/src/App.css
+++ b/src/App.css
@@ -6,22 +6,8 @@
   height: 40vmin;
 }
 
+
+
 .App-link {
-  color: red;
-  padding: 30%
+  color: #09d3ac;
 }
-
-nav {
-  background-color: brown
-}
-
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
